# readable_implementations

./: .gitignore  README.md  requirements-dev.txt  setup.cfg  setup.py
notebooks/: conv_cifar10.ipynb  run_cifar10.ipynb
src/readable_implementations/: __init__.py
src/readable_implementations/datasets/: __init__.py  cifar10.py
src/readable_implementations/datasets/cv/: cifar10.py
src/readable_implementations/models/: Transformer.py  VisionTransformer.py  __init__.py
src/readable_implementations/modules/: __init__.py  attention.py  embedding.py  layers.py  utils.py
src/readable_implementations/modules/embeddings/: __init__.py  embedding.py  embedding_patches.py  utils.py
src/readable_implementations/tokenizers/: bpe.py
src/readable_implementations/utils/: __init__.py  config.py  download_dataset.py  trainer.py
src/transformers_implementations/modules/: utils.py
tests/: test_modules.py  test_package.py  test_package_import.py
tests/datasets/: test_cifar10.py
tests/datasets/cv/: test_cifar10.py
tests/models/: test_Transformer.py  test_VisionTransformer.py
tests/modules/: test_attention.py  test_embedding.py  test_layers.py  test_utils.py
tests/modules/embeddings/: test_embedding_patches.py
tests/tokenizers/: test_trainer_bpe.py
transformers_implementations/modules/: attention.py  embedding.py  layers.py  utils.py
