[metadata]
name = readable-implementations
version = 0.0.1
author = Timur Gadelia
description =
    Implementation of different models with emphasize on readability.
[options]
package_dir =
    =src
packages = readable_implementations
python_requires = >=3.7.8
install_requires =
    torch==1.6.0
    tensorboard==2.8.0
    sacrebleu==2.0.0
    matplotlib==3.5.1

[options.extras_require]
dev =
    pytest==6.2.5
    black==21.9b0
    mypy==0.812
